--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -41,11 +41,15 @@ h2 {
     font-size: large;
 }
 
-nav {
+nav.main {
     background: #222222;
     height: 80px;
     width: 100%;
     list-style: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
 }
 
 iframe {
@@ -116,4 +120,36 @@ nav ul li a {
 nav ul li a:hover {
     color: #bbbb;
     transition: 0.4s;
+}
+
+.dd-content {
+    display: none;
+}
+
+.dd-content a {
+    display: block;
+    padding: 12px 16px;
+    text-decoration: none;
+    color: white;
+}
+
+.drop-down:hover .dd-content {
+    display: block;
+}
+
+footer {
+    background-color: #222222;
+    color: #ffffff;
+    padding: 20px;
+    text-align: center;
+    position: absolute;
+    bottom: 5;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center
 }
