--- a/templates/RandomForestClassifer.html
+++ b/templates/RandomForestClassifer.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@0.7.4/dist/tailwind.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>K-Means Clustering</title>
+    <title>RANDOM FOREST CLASSIFER</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="graphanalysis.css">
     <link rel="stylesheet" href="K-means.css">
@@ -48,7 +48,7 @@
             <li><a href="feedback.html">Feedback</a></li>
         </ul>
         <nav class="secondnav">
-            <label class="log" href="#"> K-MEANS CLUSTERING</label>
+            <label class="log" href="#"> RANDOM FOREST CLASSIFER</label>
         </nav>
 
     </nav>
