--- a/templates/RandomForestClassifer.html
+++ b/templates/RandomForestClassifer.html
@@ -6,15 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@0.7.4/dist/tailwind.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>K-Means Clustering</title>
+    <title>RANDOM FOREST CLASSIFER</title>
 
     <link rel="stylesheet" href="{{url_for('static',filename='stylesheets/style.css')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='stylesheets/graphanalysis.css')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='stylesheets/K-means.css')}}">
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-    <script src="{{url_for('static',filename='javascript/linearregression.js')}}"></script>
-
+    <script src="linearregression.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
     <script src="http://www.skulpt.org/js/skulpt.min.js" type="text/javascript"></script>
     <script src="http://www.skulpt.org/js/skulpt-stdlib.js" type="text/javascript"></script>
@@ -51,7 +49,7 @@
             <li><a href="{{url_for('templates',filename='feedback.html')}}">Feedback</a></li>
         </ul>
         <nav class="secondnav">
-            <label class="log" href="#"> K-MEANS CLUSTERING</label>
+            <label class="log" href="#"> RANDOM FOREST CLASSIFER</label>
         </nav>
 
     </nav>
@@ -65,6 +63,7 @@
 
         <img src="{{url_for('static/images',filename='kmeans_elb.png')}}" style=" border-radius:10px;border: 1px solid black; ">
         <img src="{{url_for('static/images',filename='kmeans_clusters.png')}}" style=" border-radius:10px; height: 200px; width:300px;border: 1px solid black;">
+
     </div>
     <div style="clear:both;">
     </div>
